This is the first edit after deployment. Added google analytics scripts to head tags. Also fixed section edge margins that looks incorrect on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@
 }
 
 section{
-    margin: 50px;
+    margin: 0px;
 }
 
 p{
